--- a/resources/assets/stylus/main.styl
+++ b/resources/assets/stylus/main.styl
@@ -7,4 +7,7 @@
 .tran-shadow
   transition box-shadow 0.2s ease-in-out
 
+.button
+  @apply border border-gray-300 rounded text-blue-500 px-4 py-2
+
 /* purgecss end ignore */
